syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

message ClientContext {
    optional uint32 version = 1;
    repeated uint64 opencronitems = 2;
}
