syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

enum ConsensusType {
    CONSENSUSTYPE_ERROR = 0;
    CONSENSUSTYPE_SERVER = 1;
    CONSENSUSTYPE_CLIENT = 2;
    CONSENSUSTYPE_PEER = 3;
}
