syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

message ServerContext {
    optional uint32 version = 1;
    optional string serverid = 2;
    optional uint64 highesttransactionnumber = 3;
    repeated uint64 tentativerequestnumber = 4;
}
